--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -60,9 +60,9 @@
                     Title
                     <p-sortIcon field="track.name" />
                 </th>
-                <th pSortableColumn="track.artists[0].name">
+                <th pSortableColumn="artist">
                     Artist
-                    <p-sortIcon field="track.artists[0].name" />
+                    <p-sortIcon field="artist" />
                 </th>
                 <th pSortableColumn="track.duration_ms">
                     Duration
