--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,17 +40,24 @@
                         </a>
                     </li>
 
-                    <!-- <li (click)="sidebarVisible = false">
-                        <a pRipple routerLink="['/music/search']"
+                    <li (click)="navigateToPath('/spotify/audio-history')">
+                        <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
-                            <i class="pi pi-search mr-2"></i>
-                            <span class="font-medium">Search</span>
+                            <i class="pi pi-history mr-2"></i>
+                            <span class="font-medium">Recently Played</span>
                         </a>
-                    </li> -->
+                    </li>
 
-                    
+                    <li (click)="navigateToPath('/spotify/playlists')">
+                        <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <!-- <i class="pi pi-headphones mr-2 "></i> -->
+                            <i class="bi bi-music-note-list mr-2"></i>
+                            <span class="font-medium">Playlists</span>
+                        </a>
+                    </li>
 
-                    <li>
+                    <!-- <li>
                         <a pRipple pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown"
                             leaveToClass="hidden" leaveActiveClass="slideup"
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
@@ -63,7 +70,7 @@
                             <li (click)="navigateToPath('/spotify/playlists')">
                                 <a pRipple
                                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
-                                    <!-- <i class="pi pi-headphones mr-2 "></i> -->
+                                    
                                     <i class="bi bi-music-note-list mr-2"></i>
                                     <span class="font-medium">Playlists</span>
                                 </a>
@@ -76,7 +83,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
 
 
                     <li (click)="sidebarVisible = false">
