--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -3,11 +3,12 @@
 }
 <p-confirmDialog />
 <!-- Playlist Tracks List -->
-<div class="palylist_table" *ngIf=" !showAudioFeatures">
+<div class="palylist_table" >
     <p-table [value]="playlistTracks" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         [totalRecords]="playlistTracks.length" [paginator]="true"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered()" (onSort)="tableSorted($event)">
+        [tableStyle]="{'min-width': '60rem'}" 
+         (onRowReorder)="tableReordered()" (onSort)="tableSorted($event)"> 
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <h3>Tracks</h3>
@@ -125,12 +126,19 @@
     [style]="{ width: '25rem' }">
     <span class="p-text-secondary block mb-5">Enter name for new playlist.</span>
     <div class="flex align-items-center gap-3 mb-3">
-        <label for="username" class="font-semibold w-6rem">Playlist Name</label>
-        <input pInputText id="username" class="flex-auto" [(ngModel)]="playlistName" />
+        <label for="playlistName" class="font-semibold w-6rem">Playlist Name</label>
+        <input pInputText id="playlistName" class="flex-auto" [(ngModel)]="playlistName" #playlistNameInput="ngModel"
+            required minlength="3" [pattern]="pattern"/>
+    </div>
+    <!-- Validation messages -->
+    <div *ngIf="playlistNameInput.invalid && (playlistNameInput.dirty || playlistNameInput.touched)" class="p-error">
+        <small *ngIf="playlistNameInput.errors?.['required']">Playlist name is required.</small>
+        <small *ngIf="playlistNameInput.errors?.['minlength']">Playlist name must be at least 3 characters long.</small>
+        <small *ngIf="playlistNameInput.errors?.['pattern']">Playlist name cannot be just empty spaces.</small>
     </div>
 
     <div class="flex justify-content-end gap-2">
         <p-button label="Cancel" severity="secondary" (onClick)="plNameVisible = false" />
-        <p-button label="Save" (onClick)="createNewPlaylist()" />
+        <p-button label="Save" (onClick)="createNewPlaylist()" [disabled]="playlistNameInput.invalid" />
     </div>
 </p-dialog>
