--- a/src/app/spotify/track-details/track-details.component.html
+++ b/src/app/spotify/track-details/track-details.component.html
@@ -27,7 +27,7 @@
                         <p-inputSwitch [(ngModel)]="showPaceGraph" class="mr-2" pTooltip="Pace History"
                             tooltipPosition="bottom" />
                     </div>
-                    <p-button (click)="backToTracks()">Back</p-button>
+                    <!-- <p-button (click)="backToTracks()">Back</p-button> -->
                 </div>
             </div>
             <div>
