--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -7,34 +7,32 @@
     <p-table [value]="hisotryTracks" [rows]="limit" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         (onPage)="onPageChange($event)" [totalRecords]="hisotryTracks.length" [paginator]="true" paginatorPosition="top"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTrackIds" 
-        (onRowSelect)="rowSelectionEvent()">
+        [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
+        (onRowSelect)="rowSelectionEvent()" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
                 <h3>Recently Played</h3>
-                <div class="flex flex-row align-items-center" >
-                    <div style="width: fit-content;">
-                        <label class="mx-2">
-                            <span class="material-symbols-outlined">
-                                show_chart
-                            </span>
-                        </label>
-                        <p-inputSwitch [(ngModel)]="showSummaryGraph" (onChange)="showSummaryGraphChanged()"
-                            pTooltip="Summary Graph" tooltipPosition="bottom" class="mr-2" />
-                    </div>
-                    <div style="width: fit-content;">
-                        <label class="mx-2">
-                            <span class="material-symbols-outlined">
-                                monitoring
-                            </span>
-                        </label>
-                        <p-inputSwitch [(ngModel)]="showDetailedGraph" (onChange)="showGraphChanged()"
-                            pTooltip="Detailed Graph" tooltipPosition="bottom" class="mr-2" />
+                <div class="flex flex-row align-items-center">
+                    <div class="flex flex-row align-items-center">
+                        <p-buttonGroup class="pr-3 btn-grp-custom">
+                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged()"
+                                pTooltip="Summary Graph" tooltipPosition="bottom">
+                                <span class="material-symbols-outlined">
+                                    show_chart
+                                </span>
+                            </p-button>
+                            <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
+                                pTooltip="Detailed Graph" tooltipPosition="bottom">
+                                <span class="material-symbols-outlined">
+                                    monitoring
+                                </span>
+                            </p-button>
+                        </p-buttonGroup>
                     </div>
                     <p-button class="mr-2" severity="success" icon="pi pi-play-circle" iconPos="right"
                         label="Save as new" (onClick)="plNameVisible=true"
-                        [disabled]="selectedTrackIds.length===0"></p-button>
+                        [disabled]="selectedTracksList.length===0"></p-button>
                 </div>
             </div>
             <div>
@@ -49,7 +47,9 @@
             <tr>
                 <th style="width:80px">
                 </th>
-                <th style="width:80px">
+                <th style="width: 4rem">
+                    <p-tableHeaderCheckbox (click)="selectAllClicked()" />
+                    <!-- <p-tableCheckbox (click)="selectAllClicked()" /> -->
                 </th>
                 <th style="width:80px">
                 </th>
@@ -93,7 +93,7 @@
                     <span class="pi pi-bars" pReorderableRowHandle></span>
                 </td>
                 <td>
-                    <p-tableCheckbox [value]="track.track.id" />
+                    <p-tableCheckbox [value]="track" />
                 </td>
                 <td><img [src]="track.track.album.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
                 </td>
@@ -108,15 +108,11 @@
                 <td>{{ track?.audio_features?.danceability }}</td>
                 <td>{{ track?.audio_features?.energy }}</td>
                 <td>{{ track?.audio_features?.loudness }}</td>
-                <!-- <td>
-                    <p-button class="anchor_btn" (click)="openInSpotify(track.track.external_urls.spotify)"
-                        label="Open in Spotify" [link]="true" />
-                </td> -->
             </tr>
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="10">No tracks found in audio History.</td>
+                <td colspan="12">No tracks found in audio History.</td>
             </tr>
         </ng-template>
     </p-table>
@@ -125,13 +121,13 @@
 
 
 
-<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible"
+<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible" [closable]="false"
     [style]="{ width: '25rem' }">
     <span class="p-text-secondary block mb-5">Enter name for new playlist.</span>
     <div class="flex align-items-center gap-3 mb-3">
         <label for="playlistName" class="font-semibold w-6rem">Playlist Name</label>
         <input pInputText id="playlistName" class="flex-auto" [(ngModel)]="playlistName" #playlistNameInput="ngModel"
-            required minlength="3" [pattern]="pattern"/>
+            required minlength="3" [pattern]="pattern" />
     </div>
     <!-- Validation messages -->
     <div *ngIf="playlistNameInput.invalid && (playlistNameInput.dirty || playlistNameInput.touched)" class="p-error">
@@ -141,7 +137,8 @@
     </div>
 
     <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (onClick)="plNameVisible = false" />
+        <p-button label="Cancel" severity="secondary"
+            (onClick)="plNameVisible = false; playlistName=''; playlistNameInput.reset()" />
         <p-button label="Save" (onClick)="createNewPlaylist()" [disabled]="playlistNameInput.invalid" />
     </div>
 </p-dialog>
