--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -3,20 +3,34 @@
 }
 <p-confirmDialog />
 <!-- Playlist Tracks List -->
-<div class="palylist_table" >
+<div class="palylist_table">
     <p-table [value]="playlistTracks" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         [totalRecords]="playlistTracks.length" [paginator]="true"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [tableStyle]="{'min-width': '60rem'}" 
-         (onRowReorder)="tableReordered()" (onSort)="tableSorted($event)"> 
+        [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <h3>Tracks</h3>
                 <h3>{{currentPlayListName}}</h3>
                 <div class="flex flex-row align-items-center">
                     <div class="flex flex-row align-items-center" *ngIf="playlistTracks.length > 0">
-                        <div style="width: fit-content;">
-                            <!-- <label class="m-2 pb-2">Summary Graph</label> -->
+                        <div class="pr-3 ">
+                            <p-buttonGroup class="btn-grp-custom">
+                                <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged()"
+                                    size="small" pTooltip="Summary Graph" tooltipPosition="bottom">
+                                    <span class="material-symbols-outlined">
+                                        show_chart
+                                    </span>
+                                </p-button>
+                                <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
+                                    pTooltip="Detailed Graph" tooltipPosition="bottom">
+                                    <span class="material-symbols-outlined">
+                                        monitoring
+                                    </span>
+                                </p-button>
+                            </p-buttonGroup>
+                        </div>
+                        <!-- <div style="width: fit-content;">
                             <label class="mx-2">
                                 <span class="material-symbols-outlined">
                                     show_chart
@@ -26,7 +40,6 @@
                                 pTooltip="Summary Graph" tooltipPosition="bottom" class="mr-2" />
                         </div>
                         <div style="width: fit-content;">
-                            <!-- <label class="m-2 pb-2">Detailed Graph</label> -->
                             <label class="mx-2">
                                 <span class="material-symbols-outlined">
                                     monitoring
@@ -34,7 +47,7 @@
                             </label>
                             <p-inputSwitch [(ngModel)]="showDetailedGraph" (onChange)="showGraphChanged()"
                                 pTooltip="Detailed Graph" tooltipPosition="bottom" class="mr-2" />
-                        </div>
+                        </div> -->
                         <p-button class="mr-2" severity="warning" (click)="confirmUpdatePlaylist()"
                             icon="pi pi-play-circle" iconPos="right" label="Save changes"></p-button>
                         <p-button class="mr-2" severity="success" icon="pi pi-play-circle" iconPos="right"
@@ -122,13 +135,13 @@
 
 
 
-<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible"
+<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible" [closable]="false"
     [style]="{ width: '25rem' }">
     <span class="p-text-secondary block mb-5">Enter name for new playlist.</span>
     <div class="flex align-items-center gap-3 mb-3">
         <label for="playlistName" class="font-semibold w-6rem">Playlist Name</label>
         <input pInputText id="playlistName" class="flex-auto" [(ngModel)]="playlistName" #playlistNameInput="ngModel"
-            required minlength="3" [pattern]="pattern"/>
+            required minlength="3" [pattern]="pattern" />
     </div>
     <!-- Validation messages -->
     <div *ngIf="playlistNameInput.invalid && (playlistNameInput.dirty || playlistNameInput.touched)" class="p-error">
@@ -138,7 +151,8 @@
     </div>
 
     <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (onClick)="plNameVisible = false" />
+        <p-button label="Cancel" severity="secondary"
+            (onClick)="plNameVisible = false; playlistName=''; playlistNameInput.reset()" />
         <p-button label="Save" (onClick)="createNewPlaylist()" [disabled]="playlistNameInput.invalid" />
     </div>
 </p-dialog>
