--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -30,8 +30,13 @@
                             </p-button>
                         </p-buttonGroup>
                     </div>
-                    <p-button class="mr-2" severity="success" icon="pi pi-play-circle" iconPos="right"
-                        label="Save as new" (onClick)="plNameVisible=true"
+
+                    <p-button class="mr-2" severity="warning" (onClick)="addTracksToExistingPlaylist()"
+                        [disabled]="selectedTracksList.length===0" icon="pi pi-save" iconPos="right"
+                        pTooltip="Add tracks to existing playlist" tooltipPosition="bottom"></p-button>
+
+                    <p-button class="mr-2" severity="success" icon="pi pi-save" iconPos="right"
+                        pTooltip="Save tracks as a new playlist" tooltipPosition="bottom" (onClick)="plNameVisible=true"
                         [disabled]="selectedTracksList.length===0"></p-button>
                 </div>
             </div>
@@ -120,7 +125,7 @@
 </div>
 
 
-
+<!-- Dialog for saving tracks as a new playlist -->
 <p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible" [closable]="false"
     [style]="{ width: '25rem' }">
     <span class="p-text-secondary block mb-5">Enter name for new playlist.</span>
@@ -141,4 +146,50 @@
             (onClick)="plNameVisible = false; playlistName=''; playlistNameInput.reset()" />
         <p-button label="Save" (onClick)="createNewPlaylist()" [disabled]="playlistNameInput.invalid" />
     </div>
+</p-dialog>
+
+
+<!-- Dialog for adding tracks to existing playlist -->
+<p-dialog header="Add Tracks to existing Playlist" [modal]="true" [draggable]="false" [(visible)]="tracksListVisible"
+    [closable]="true" [style]="{ width: '25rem' }">
+    @if(isLoading) {
+    <app-progress-bar></app-progress-bar>
+    }
+    <div>
+        <p-table [value]="userPlaylists" [tableStyle]="{ 'min-width': '20rem' }" selectionMode="single"
+            [(selection)]="selectedPlaylist">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th> </th>
+                    <th>Playlist Name</th>
+                    <!-- <th>Tracks</th> -->
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-playlist>
+                <tr [pSelectableRow]="playlist" (click)="confirmUpdatePlaylist()" >
+                    <td>
+                        @if (playlist.images===null) {
+                        <img src="images/defaultPlaylistImage.png" class="exs-playlist-img-tb">
+                        }@else {
+                        <img [src]="playlist?.images[0].url" class="exs-playlist-img-tb">
+                        }
+                    </td>
+                    <td>
+                        <strong>{{playlist.name }} </strong>({{playlist.tracks.total}}-Tracks)
+                        <!-- <p-button class="anchor_btn" [label]="playlist.name" [link]="true" /> -->
+                    </td>
+                    <!-- <td>
+                        {{playlist.name }} ({{playlist.tracks.total}}-Tracks)
+                    </td> -->
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+
+    <!-- <ng-template pTemplate="footer">
+        <div class="mt-2 flex justify-content-end gap-2">
+            <p-button label="Cancel" severity="secondary" (onClick)="tracksListVisible = false" />
+            <p-button label="Save" (onClick)="confirmUpdatePlaylist()" [disabled]="playlistNameInput.invalid" />
+        </div>
+    </ng-template> -->
 </p-dialog>
