--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -22,10 +22,10 @@
             <div class="flex justify-content-between">
                 <h2>Activities</h2>
                 <div>
-                    <p-button label="Fetch" severity="info" (click)="FetchActivitiesFromStrava()"
-                        icon="pi pi-file-import" iconPos="right" />
-                    <p-button label="Clear" class="ml-2" [outlined]="true" icon="pi pi-filter-slash"
-                        (onClick)="clear(dt1)" />
+                    <p-button  severity="info" (click)="FetchActivitiesFromStrava()"
+                        icon="pi pi-file-import" iconPos="right" pTooltip="Fetch activities" tooltipPosition="bottom"/>
+                    <p-button  class="ml-2" [outlined]="true" icon="pi pi-filter-slash"
+                        (onClick)="clear(dt1)" pTooltip="Clear sorting(s)" tooltipPosition="bottom"/>
                 </div>
             </div>
         </ng-template>
@@ -52,8 +52,8 @@
                             [label]="activity.name" [link]="true" />
 
                         <!-- <p-badge></p-badge> -->
-                        <i *ngIf="!activity.isSaved" pBadge style="font-size: 2rem; margin: auto;"
-                         [value]="'New'" severity="danger"></i>
+                        <i *ngIf="!activity.isSaved" pBadge style="font-size: 2rem; margin: auto;" [value]="'New'"
+                            severity="danger"></i>
                     </div>
                 </td>
                 <td>{{ activity.start_date | date:'MMM d, y, h:mm:ss a' }}</td>
@@ -85,10 +85,15 @@
             <div class="flex flex-row justify-content-between">
                 <h3>Activity Details</h3>
                 <div>
-                    <p-button label="Save" severity="success" [disabled]="isADSaved" (click)="saveActivityDetails()"
+                    <p-button pTooltip="Save" tooltipPosition="bottom" severity="success" [disabled]="isADSaved" (click)="saveActivityDetails()"
                         icon="pi pi-save" iconPos="right" />
 
-                    <p-button (click)="fetchActivitiesFromDb()" class="ml-2">Back</p-button>
+                    <p-button (click)="fetchActivitiesFromDb()" class="ml-2" pTooltip="Back" tooltipPosition="bottom"
+                        size="small" pTooltip="Back" tooltipPosition="bottom">
+                        <span class="material-symbols-outlined">
+                            undo
+                        </span>
+                    </p-button>
                 </div>
             </div>
 
@@ -145,7 +150,11 @@
 
             <div class="flex flex-row justify-content-between">
                 <h3>Audio Features</h3>
-                <p-button (click)="showAudioFeatures=false">Back</p-button>
+                <p-button (click)="showAudioFeatures=false" pTooltip="Back" tooltipPosition="bottom"
+                size="small">
+                <span class="material-symbols-outlined">
+                    undo
+                </span></p-button>
             </div>
 
         </ng-template>
