--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,11 +40,13 @@
                         </a>
                     </li>
 
-                    <li (click)="navigateToPath('/spotify/audio-history')">
+                    <li (click)="navigateToPath('/spotify/audio-library')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
-                            <i class="pi pi-history mr-2"></i>
-                            <span class="font-medium">Recently Played</span>
+                            <span class="material-symbols-outlined mr-2">
+                                library_music
+                                </span>
+                            <span class="font-medium">Audio Library</span>
                         </a>
                     </li>
 
@@ -54,6 +56,14 @@
                             <!-- <i class="pi pi-headphones mr-2 "></i> -->
                             <i class="bi bi-music-note-list mr-2"></i>
                             <span class="font-medium">Playlists</span>
+                        </a>
+                    </li>
+
+                    <li (click)="navigateToPath('/spotify/audio-history')">
+                        <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <i class="pi pi-history mr-2"></i>
+                            <span class="font-medium">Recently Played</span>
                         </a>
                     </li>
 
