--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -1,1 +1,193 @@
-<p>audio-library works!</p>
+@if(isLoading) {
+<app-progress-bar></app-progress-bar>
+}
+<p-confirmDialog />
+
+<div class="palylist_table">
+    <p-table [value]="audioTracks" [rows]="limit" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
+        (onPage)="onPageChange($event)" [totalRecords]="audioTracks.length" [paginator]="true" paginatorPosition="top"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="added_at"
+        (sortOrder)="1" [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
+        (onRowSelect)="rowSelectionEvent()" [lazy]="true"  (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta"
+         (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)" >
+        <ng-template pTemplate="caption">
+            <div class="flex flex-row justify-content-between">
+                <div></div>
+                <h3>Audio Library</h3>
+                <div class="flex flex-row align-items-center">
+                    <div class="flex flex-row align-items-center">
+                        <p-buttonGroup class="pr-3 btn-grp-custom">
+                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged()"
+                                pTooltip="Summary Graph" tooltipPosition="bottom">
+                                <span class="material-symbols-outlined">
+                                    show_chart
+                                </span>
+                            </p-button>
+                            <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
+                                pTooltip="Detailed Graph" tooltipPosition="bottom">
+                                <span class="material-symbols-outlined">
+                                    monitoring
+                                </span>
+                            </p-button>
+                        </p-buttonGroup>
+                    </div>
+
+                    <p-button class="mr-2" severity="warning" (onClick)="addTracksToExistingPlaylist()"
+                        [disabled]="selectedTracksList.length===0" icon="pi pi-save" iconPos="right"
+                        pTooltip="Add tracks to existing playlist" tooltipPosition="bottom"></p-button>
+
+                    <p-button class="mr-2" severity="success" size="small" pTooltip="Save tracks as a new playlist"
+                        tooltipPosition="bottom" (onClick)="plNameVisible=true"
+                        [disabled]="selectedTracksList.length===0">
+                        <span class="material-symbols-outlined">
+                            playlist_add
+                        </span>
+                    </p-button>
+
+                    <p-button  class="pr-2" [outlined]="true" icon="pi pi-filter-slash"
+                        (onClick)="clear(tableRef)" pTooltip="Clear filter(s)" tooltipPosition="bottom"/>
+                </div>
+            </div>
+            <div>
+                <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" />
+            </div>
+            <div><p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
+
+            </div>
+        </ng-template>
+
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width:80px">
+                </th>
+                <th style="width: 4rem">
+                    <p-tableHeaderCheckbox (click)="selectAllClicked()" />
+                </th>
+                <th style="width:80px">
+                </th>
+                <th pSortableColumn="name" style="width:250px">
+                    Title
+                    <p-sortIcon field="name" />
+                    <p-columnFilter type="text" field="name" display="menu" />
+                </th>
+                <th pSortableColumn="artist" style="width:200px">
+                    Artist
+                    <p-sortIcon field="artist" />
+                    <p-columnFilter type="text" field="artist" display="menu" />
+                </th>
+                <th pSortableColumn="duration_ms">
+                    Duration
+                    <p-sortIcon field="duration_ms" />
+                    <p-columnFilter type="text" field="duration" display="menu" />
+                </th>
+                <th pSortableColumn="audio_features.tempo">
+                    Tempo
+                    <p-sortIcon field="audio_features.tempo" />
+                    <p-columnFilter type="numeric" field="audio_features.tempo" display="menu" />
+                </th>
+                <th pSortableColumn="audio_features.danceability">
+                    Danceability
+                    <p-sortIcon field="audio_features.danceability" />
+                    <p-columnFilter type="numeric" field="audio_features.danceability" display="menu" />
+                </th>
+                <th pSortableColumn="audio_features.energy">
+                    Energy
+                    <p-sortIcon field="audio_features.energy" />
+                    <p-columnFilter type="numeric" field="audio_features.energy" display="menu" />
+                </th>
+                <th pSortableColumn="audio_features.loudness">
+                    Loudness
+                    <p-sortIcon field="audio_features.loudness" />
+                    <p-columnFilter type="numeric" field="audio_features.loudness" display="menu" />
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-track let-index="rowIndex">
+            <tr [pReorderableRow]="index">
+                <td>
+                    <span class="pi pi-bars" pReorderableRowHandle></span>
+                </td>
+                <td>
+                    <p-tableCheckbox [value]="track" />
+                </td>
+                <td><img [src]="track.album.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
+                </td>
+                <td>
+                    <p-button class="anchor_btn" [label]="track?.name" [link]="true"
+                        (onClick)="navigateToTrackDetails(track.name,track.id)" />
+                </td>
+                <td>{{track.artists[0].name}}</td>
+                <td>{{ formatTrackDuration(track?.duration_ms) }}</td>
+                <td>{{ track.audio_features?.tempo}}</td>
+                <td>{{ track.audio_features?.danceability }}</td>
+                <td>{{ track.audio_features?.energy }}</td>
+                <td>{{ track.audio_features?.loudness }}</td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr class="">
+                <td colspan="12">No tracks found in audio Library.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+
+</div>
+
+
+<!-- Dialog for saving tracks as a new playlist -->
+<p-dialog header="Create New Playlist" [modal]="true" [draggable]="false" [(visible)]="plNameVisible" [closable]="false"
+    [style]="{ width: '25rem' }">
+    <span class="p-text-secondary block mb-5">Enter name for new playlist.</span>
+    <div class="flex align-items-center gap-3 mb-3">
+        <label for="playlistName" class="font-semibold w-6rem">Playlist Name</label>
+        <input pInputText id="playlistName" class="flex-auto" [(ngModel)]="playlistName" #playlistNameInput="ngModel"
+            required minlength="3" [pattern]="pattern" />
+    </div>
+    <!-- Validation messages -->
+    <div *ngIf="playlistNameInput.invalid && (playlistNameInput.dirty || playlistNameInput.touched)" class="p-error">
+        <small *ngIf="playlistNameInput.errors?.['required']">Playlist name is required.</small>
+        <small *ngIf="playlistNameInput.errors?.['minlength']">Playlist name must be at least 3 characters long.</small>
+        <small *ngIf="playlistNameInput.errors?.['pattern']">Playlist name cannot be just empty spaces.</small>
+    </div>
+
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Cancel" severity="secondary"
+            (onClick)="plNameVisible = false; playlistName=''; playlistNameInput.reset()" />
+        <p-button label="Save" (onClick)="createNewPlaylist()" [disabled]="playlistNameInput.invalid" />
+    </div>
+</p-dialog>
+
+
+<!-- Dialog for adding tracks to existing playlist -->
+<p-dialog header="Add Tracks to existing Playlist" [modal]="true" [draggable]="false" [(visible)]="tracksListVisible"
+    [closable]="true" [style]="{ width: '25rem' }">
+    @if(isLoading) {
+    <app-progress-bar></app-progress-bar>
+    }
+    <div>
+        <p-table [value]="userPlaylists" [tableStyle]="{ 'min-width': '20rem' }" selectionMode="single"
+            [(selection)]="selectedPlaylist">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th> </th>
+                    <th>Playlist Name</th>
+                    <!-- <th>Tracks</th> -->
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-playlist>
+                <tr [pSelectableRow]="playlist" (click)="confirmUpdatePlaylist()">
+                    <td>
+                        @if (playlist.images===null) {
+                        <img src="images/defaultPlaylistImage.png" class="exs-playlist-img-tb">
+                        }@else {
+                        <img [src]="playlist?.images[0].url" class="exs-playlist-img-tb">
+                        }
+                    </td>
+                    <td>
+                        <strong>{{playlist.name }} </strong>({{playlist.tracks.total}}-Tracks)
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</p-dialog>
