--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,14 @@
                         </a>
                     </li>
 
+                    <li (click)="navigateToPath('/spotify/liked-songs')">
+                        <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <i class="pi pi-heart-fill mr-2"></i>
+                            <span class="font-medium">Liked Songs</span>
+                        </a>
+                    </li> 
+
                     <li (click)="navigateToPath('/spotify/audio-history')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
