--- a/src/app/user/settings/settings.component.html
+++ b/src/app/user/settings/settings.component.html
@@ -1,1 +1,16 @@
 <p>settings works!</p>
+
+<!-- <div class="m-2 flex flex-row justify-content-between">
+    <div></div>
+    <div>
+        <i class="bi bi-spotify mr-2"></i>
+        <span class="font-medium mr-2">Link Spotify</span>
+        <p-inputSwitch [(ngModel)]="spotifyLinked" (onChange)="manageSpotifyAuth(spotifyLinked)" />
+    </div>
+    <div>
+        <i class="bi bi-strava mr-2"></i>
+        <span class="font-medium mr-2">Link Strava</span>
+        <p-inputSwitch [(ngModel)]="stravaLinked" (onChange)="manageStravaAuth(stravaLinked)" />
+    </div>
+    <div></div>
+</div> -->
