--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,7 +114,7 @@
 
                     <li>
                         <a pRipple
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
+                            class="custom_link_switch flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="bi bi-spotify mr-2"></i>
                             <span class="font-medium mr-2">Link Spotify</span>
                             <p-inputSwitch [(ngModel)]="spotifyLinked" (onChange)="manageSpotifyAuth(spotifyLinked)" />
@@ -123,7 +123,7 @@
 
                     <li>
                         <a pRipple
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
+                            class="custom_link_switch flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="bi bi-strava mr-2"></i>
                             <span class="font-medium mr-2">Link Strava</span>
                             <p-inputSwitch [(ngModel)]="stravaLinked" (onChange)="manageStravaAuth(stravaLinked)" />
